--- a/User-registration/Templates/Homestyle.css
+++ b/User-registration/Templates/Homestyle.css
@@ -27,6 +27,7 @@ body, html {
   max-width: 1250px;
   margin: auto;
   padding: 0 30px;
+  /*background-color: yellow;*/
 }
 .navbar{
   position: fixed;
@@ -44,6 +45,7 @@ body, html {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  
 }
 .navbar .logo a{
   color: #fff;
