--- a/User-registration/Templates/Homestyle.css
+++ b/User-registration/Templates/Homestyle.css
@@ -267,8 +267,9 @@ img {vertical-align: middle;}
 
 /* Caption text */
 .text {
-  color: #f2f2f2;
-  font-size: 15px;
+  color: white;
+  font-size: 20px;
+  font-weight: bolder;
   padding: 8px 12px;
   position: absolute;
   bottom: 8px;
@@ -279,7 +280,8 @@ img {vertical-align: middle;}
 /* Number text (1/3 etc) */
 .numbertext {
   color: #f2f2f2;
-  font-size: 12px;
+  font-size: 17px;
+  font-weight: bolder;
   padding: 8px 12px;
   position: absolute;
   top: 0;
@@ -407,6 +409,11 @@ img {vertical-align: middle;}
   margin: auto;
   color: white; 
   text-align: center;
+  font-size: 14pt;
+}
+.information h2{
+      color: black; 
+
 }
 #Python {
     border-radius: 5px;
