--- a/User-registration/Templates/Homestyle.css
+++ b/User-registration/Templates/Homestyle.css
@@ -1,7 +1,7 @@
 body, html {
-  /*height: 100%;*/
+  height: 100%;
   margin: 0;
-  /*background-color:black;*/
+  background-color:#DEDBDB;
 }
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
 *{
@@ -27,7 +27,6 @@ body, html {
   max-width: 1250px;
   margin: auto;
   padding: 0 30px;
-  /*background-color: yellow;*/
 }
 .navbar{
   position: fixed;
@@ -155,7 +154,7 @@ body, html {
 }
 
 .bg { 
-  height: 200px;
+  height: 150px;
   background-image:url("Images/background.png"); 
   background-position: center;
   background-repeat: no-repeat;
@@ -495,9 +494,7 @@ border: 2px solid #6bd4b1;
 /* login */
 
 #login_table{
-  /*transform: translateX(60px);*/
   text-align: center;
-
 }
 
 .login-container label, input, textarea{
@@ -505,7 +502,6 @@ font-size: 12pt;
 line-height: 24pt;
 font-family: Arial;
 }
-
 
 .login-container input, textarea, select{
 border: none;
@@ -623,7 +619,7 @@ background: rgb(255, 199, 184);
   margin: 5px 10px 10px 10px;
 }
 .footer li a {
-  border-radius: 50%;
+  border-radius: 100%;
 }
 .footer li a:hover{
   background-color: white;
